Clasificados los problemas que llevo resueltos